[package]
name = "tabtps"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin            = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", rev = "cbdc919affd86a804e9332565f715f4debb3f612", package = "pumpkin" }
pumpkin-data       = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", rev = "cbdc919affd86a804e9332565f715f4debb3f612", package = "pumpkin-data" }
pumpkin-protocol   = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", rev = "cbdc919affd86a804e9332565f715f4debb3f612", package = "pumpkin-protocol" }
pumpkin-util       = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", rev = "cbdc919affd86a804e9332565f715f4debb3f612", package = "pumpkin-util" }

serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1", features = ["full"] }

log = "0.4"
