[package]
name = "tabtps"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin            = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", rev = "4616289fbe6baa247d413a7981ae6ced7144cde5", package = "pumpkin" }
pumpkin-data       = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", rev = "4616289fbe6baa247d413a7981ae6ced7144cde5", package = "pumpkin-data" }
pumpkin-protocol   = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", rev = "4616289fbe6baa247d413a7981ae6ced7144cde5", package = "pumpkin-protocol" }
pumpkin-util       = { git = "https://github.com/Pumpkin-MC/Pumpkin.git", rev = "4616289fbe6baa247d413a7981ae6ced7144cde5", package = "pumpkin-util" }

serde = { version = "1.0", features = ["derive"] }

tokio = { version = "1", features = ["full"] }

log = "0.4"
